# fabric

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Justfile  LICENSE  README.md  docker-compose.yml
config/: docker.config.toml  simulation.config.toml
crates/commitments/: Cargo.toml
crates/commitments/src/: client.rs  lib.rs  methods.rs  metrics.rs  rpc.rs  server.rs  types.rs
crates/commitments/src/types/: mod.rs  spec.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  logging.rs  metrics.rs  utils.rs
crates/common/src/storage/: db.rs  mod.rs
crates/constraints/: Cargo.toml
crates/constraints/src/: api.rs  client.rs  helpers.rs  lib.rs  metrics.rs  proxy.rs  routes.rs  server.rs  types.rs
crates/constraints/src/types/: mod.rs  spec.rs
crates/inclusion/: Cargo.toml
crates/inclusion/src/: constants.rs  lib.rs  proofs.rs  storage.rs  types.rs
crates/inclusion/src/gateway/: config.rs  mod.rs  rpc.rs  state.rs  utils.rs
crates/inclusion/src/gateway/services/: constraint_manager.rs  delegation_manager.rs  mod.rs  rpc.rs  state.rs
crates/inclusion/src/proposer/: config.rs  delegation_manager.rs  mod.rs  state.rs  utils.rs
crates/inclusion/src/relay/: config.rs  mod.rs  state.rs  utils.rs
crates/inclusion/src/relay/services/: lookahead_manager.rs  mod.rs  proxy.rs  server.rs
crates/lookahead/: Cargo.toml
crates/lookahead/src/: beacon_client.rs  constants.rs  lib.rs  types.rs  utils.rs
crates/proposer/: Cargo.toml
crates/proposer/src/: delegation_manager.rs  lib.rs  state.rs  storage.rs
crates/signing/: Cargo.toml
crates/signing/src/: lib.rs  signer.rs  types.rs  utils.rs
crates/urc/: Cargo.toml
crates/urc/src/: lib.rs  utils.rs
crates/urc/src/bindings/: bar.rs  bls.rs  bls_utils.rs  bytes_utils.rs  dummy_slasher.rs  ecdsa.rs  ecdsa_utils.rs  enumerable_set.rs  foo.rs  i_reentrant_contract.rs  i_registry.rs  i_slasher.rs  ierc165.rs  ierc20.rs  ierc721.rs  ierc721_enumerable.rs  ierc721_metadata.rs  ierc721_token_receiver.rs  inclusion_preconf_slasher.rs  math.rs  merkle_proof_lib.rs  merkle_tree.rs  merkle_tree_lib.rs  merkle_trie.rs  mock_erc20.rs  mock_erc721.rs  panic.rs  preconf_structs.rs  reentrant_contract.rs  reentrant_registration_contract.rs  reentrant_slash_equivocation.rs  reentrant_slashable_registration_contract.rs  registry.rs  rlp_reader.rs  rlp_writer.rs  safe_cast.rs  secure_merkle_trie.rs  state_lock_slasher.rs  transaction_decoder.rs
kurtosis/: blocklist.json  constraints-builder-docker-config.toml  docker-compose.yml  extract_ports.py  get_config_ports.py  get_kurtosis_data.sh  get_kurtosis_keys.sh  kurtosis-network-params.yaml  run.sh  run_kurtosis.sh  stop.sh  update_chain_line.sh
kurtosis/config/: constraints-builder-config.toml  docker-compose.yml
kurtosis/scripts/: get_kurtosis_data.sh  restart.sh  stop.sh
provisioning/: beacon-mock.Dockerfile  build.Dockerfile  gateway.Dockerfile  kurtosis-network-params.yaml  proposer.Dockerfile  relay.Dockerfile  signer.Dockerfile  spammer.Dockerfile
