[workspace]
members = [
    "bin",
    "crates/common",
    "crates/commitments",
    "crates/constraints",
    "crates/inclusion",
    "crates/lookahead",
    "crates/signing",
    "crates/urc",
    # "tests",
]
resolver = "2"

[workspace.dependencies]
eyre = "0.6"
config = "0.15.15"
rocksdb = "0.24"
jsonrpsee = { version = "0.26.0", features = ["http-client", "server", "client-core", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
alloy = { version = "^1.0.35", features = [
    "full",
    "getrandom",
    "node-bindings",
    "providers",
    "rpc-types-beacon",
    "serde",
    "signer-local",
    "ssz",
    "consensus",
    "rlp"
] }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
axum = { version = "0.8", features = ["macros", "multipart"] }
axum-reverse-proxy = { version = "1.0.0", features = ["native-tls"] }
tower = "0.5.2"
tower-http = { version = "0.6", features = ["trace"] }
reqwest = { version = "0.12.4", features = ["json", "rustls-tls"] }
async-trait = "0.1.89"
tempfile = "3.8"
prometheus = "0.14.0"
lazy_static = "1.5.0"
blst = "0.3"
tokio-test = "0.4"
rand = "0.8"
mockall = "0.13"
ethereum_ssz_derive = "0.9.0"
ethereum_ssz = "0.9.0"
# for merkle proofs
eth_trie = "0.4.0" 
ethereum-types = "0.14.1"
bincode = "1.3"

# commit-boost = { git = "https://github.com/Commit-Boost/commit-boost-client", branch = "fabric" }
# cb-common = { git = "https://github.com/Commit-Boost/commit-boost-client", branch = "fabric" }
# cb-signer = { git = "https://github.com/Commit-Boost/commit-boost-client", branch = "fabric" }
commit-boost = { git = "https://github.com/JasonVranek/commit-boost-client", branch = "fabric" }
cb-common = { git = "https://github.com/JasonVranek/commit-boost-client", branch = "fabric" }
cb-signer = { git = "https://github.com/JasonVranek/commit-boost-client", branch = "fabric" }


[patch.crates-io]
blstrs_plus = { git = "https://github.com/Commit-Boost/blstrs" }