[package]
name = "fabric-commitments"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { package = "fabric-common", path = "../common" }
eyre = { workspace = true }
jsonrpsee = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
alloy = { workspace = true }
prometheus = { workspace = true }
lazy_static = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }