[package]
name = "fabric-common"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { workspace = true }
eyre = { workspace = true }
rocksdb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
prometheus = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }