[package]
name = "fabric-constraints"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { package = "fabric-common", path = "../common" }
eyre = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
alloy = { workspace = true }
lazy_static = { workspace = true }
prometheus = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
axum-reverse-proxy = { workspace = true }
reqwest = { workspace = true }
mockall = { workspace = true, optional = true }
ethereum_ssz_derive = { workspace = true }
ethereum_ssz = { workspace = true }

[dev-dependencies]
cb-common = { workspace = true }
mockall = { workspace = true }
tokio = { workspace = true }